0025199: Bad tolerance edge generated by blend algorithm

Fixed incorrect surface borders computing.

Test cases for issue CR25199